Version 1.1
^^^^^^^^^^^^^
* Added new generic functions for duck database to output tables to files
* Expansion of systeminformation module to feedback:
  - CPU usage
  - System uptime
  - System information
  - Network stats
  - Top processes
* New function in data clean to keep alphabetical characters only

Version 1.0.2
^^^^^^^^^^^^^

* Added Bitgen Features:
  - `generate_random_uuid`: Generates a random UUID (Universally Unique Identifier) using UUID version 4, with dashes removed.
  - `generate_custom_uuid`: Generates a random UUID using UUID version 4, formatted with a specified marker. The default marker is a dash ('-'), but it can be customized.

Version 1.0.1
^^^^^^^^^^^^^

* First full release of package